--- a/styles/genetics/_index.scss
+++ b/styles/genetics/_index.scss
@@ -3,3 +3,5 @@
 @forward '../genetics/grid';
 @forward '../genetics/measurements';
 @forward '../genetics/resets';
+@forward '../genetics/form';
+@forward '../genetics/buttons';
