--- a/styles/genetics/_grid.scss
+++ b/styles/genetics/_grid.scss
@@ -1,23 +1,103 @@
+////
+///////// index and shared////////////
+////
 @mixin body_flex {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: space-between;
   align-items: center;
+  flex-wrap: nowrap;
 }
 
-@mixin nav_flex {
-  margin: 0;
-  padding: 0;
+@mixin nav_father {
+ display: flex;
+ margin-bottom: 5%;
+}
+
+@mixin logo_flex {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+
+@mixin nav_fetus {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  list-style-type: none;
 }
 
 @mixin nav_links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+@mixin h_father_flex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+@mixin h_fetus_flex {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin main_grid {
+  display: grid;
+  grid-template-rows: repeat(30, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 12px;
+}
+
+@mixin middle_flex {
+  display: flex;
+  align-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+@mixin linkgroup_flex {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-left: 1vw;
+}
+
+@mixin awards_flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+@mixin awards_father {
+  margin-top: 3vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: nowrap;
+}
+
+@mixin awards_names {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+@mixin foot_father {
+  margin-bottom: 5%;
+  margin-top: 1%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -25,23 +105,57 @@
   align-items: center;
 }
 
-@mixin h_father_flex {
+@mixin foot_flex {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 }
 
-@mixin h_fetus_flex {
+@mixin icons_flex {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+}
+////
+/////////////// contact page//////////
+/////
+@mixin contact_section {
+  height: 30vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+@mixin contact_head {
+  display: flex;
+  flex-direction: row;
+  width: 55%;
+  height: 20vh;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+@mixin contact_text {
+  width: 50%;
+  margin-top: 1vh;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+@mixin contact_father {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: flex-start;
-}
-
-@mixin main_grid {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(3,1fr);
-  column-gap: 3%;
+  justify-content: center;
+  align-items: center;
 }
