--- a/styles/genetics/_measurements.scss
+++ b/styles/genetics/_measurements.scss
@@ -1,39 +1,29 @@
-//////////////// home page  ///////////
 
 // in relation to parent element//
 $full-father: 100%;
 $half-father:50%;
 $quarter-father: 25%;
+$third-father: 27%;
 
-// body //
-$width-full: 100vw;
-$height-full: 100vh;
+$height-navfoot: 4vh;
 
-// navigation and foot //
-$height-navfoot: 6vh;
-$width-navfoot: 81.5vw;
-
-// logo size//
-$logo-width: 10%;
+$logo-width: 15%;
 //logo height is 100%//
 
-// header //
 $height-header: 29vh;
-$width-header: 76vw;
+$width-header: 65%;
 
-//main//
-$height-main: 80vh;
-$width-main: 81.6vw;
+$height-middle: 20vh;
 
-// middle div //
-$height-middle: 2.7vh;
+@mixin content_size {
+    height: 70%;
+    width: 80%;
+    margin-top: 5%;
+}
 
-// section awards //
-$height-awards: 21vh;
-
-// grid //
-$height-grid: 51vh;
-// width is main width! //
-
+@mixin awards_height {
+    margin-top: 1vh;
+    margin-bottom: 11vh;
+}
 
 
